--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 performance_evaluations/
 pretrained_models/
 saved_models/
@@ -21,5 +20,6 @@ datasets/*
 *.webp
 *.svg
 **/datasets/
+**/__pycache__/
 
 
